[gd_scene load_steps=10 format=3 uid="uid://sfk2hemtd6qb"]

[ext_resource type="Script" path="res://scripts/world.gd" id="1_3h8ol"]
[ext_resource type="Texture2D" uid="uid://6kft2y8fr8sb" path="res://assets/tiles_spritesheet.png" id="1_fs4mk"]
[ext_resource type="PackedScene" uid="uid://djws51ielo1ar" path="res://scenes/player.tscn" id="2_pttrc"]
[ext_resource type="Script" path="res://scripts/tile_map.gd" id="3_v4ukn"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="5_l224l"]
[ext_resource type="Script" path="res://scripts/volume.gd" id="6_upfhy"]
[ext_resource type="AudioStream" uid="uid://dhymqahfqpqly" path="res://assets/rocket_engine.001.wav" id="7_kryq8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jqycc"]
texture = ExtResource("1_fs4mk")
separation = Vector2i(2, 2)
texture_region_size = Vector2i(70, 70)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
11:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0

[sub_resource type="TileSet" id="TileSet_p1p78"]
tile_size = Vector2i(70, 70)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/1 = SubResource("TileSetAtlasSource_jqycc")

[node name="World" type="Node2D"]
script = ExtResource("1_3h8ol")

[node name="TileMap" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_p1p78")
script = ExtResource("3_v4ukn")

[node name="Ship" parent="." instance=ExtResource("2_pttrc")]
position = Vector2(784, -5000)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
z_index = -1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="v_vel" type="Label" parent="HUD/Control"]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 56.0
offset_bottom = 39.0
text = "v_vel"

[node name="h_vel" type="Label" parent="HUD/Control"]
layout_mode = 1
offset_left = 16.0
offset_top = 48.0
offset_right = 56.0
offset_bottom = 71.0
text = "h_vel"

[node name="fuel" type="Label" parent="HUD/Control"]
layout_mode = 1
offset_left = 16.0
offset_top = 112.0
offset_right = 56.0
offset_bottom = 135.0
text = "fuel
"

[node name="altitude" type="Label" parent="HUD/Control"]
layout_mode = 1
offset_left = 16.0
offset_top = 80.0
offset_right = 77.0
offset_bottom = 103.0
text = "altitude"

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("5_l224l")

[node name="ResultText" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/ResultText"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -30.0
offset_top = 56.0
offset_right = 30.0
offset_bottom = 144.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64

[node name="PauseMenu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -152.0
offset_right = 100.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0730591, 0.278855, 0.519531, 1)

[node name="Resume" type="Button" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -126.0
offset_right = 35.0
offset_bottom = -95.0
grow_horizontal = 2
grow_vertical = 2
text = "Resume"

[node name="Quit" type="Button" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 66.0
offset_right = 6.0
offset_bottom = 97.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[node name="Restart" type="Button" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -62.0
offset_right = 29.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="Settings" type="Button" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 2.0
offset_right = 34.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[node name="SettingsMenu" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -152.0
offset_right = 100.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/SettingsMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0730591, 0.278855, 0.519531, 1)

[node name="Back" type="Button" parent="UI/SettingsMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -44.0
offset_right = 53.0
offset_bottom = -13.0
grow_vertical = 0
text = "Back"

[node name="Volume" type="HSlider" parent="UI/SettingsMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_top = 40.0
offset_right = -12.0
offset_bottom = 56.0
grow_horizontal = 0
max_value = 1.0
step = 0.05
script = ExtResource("6_upfhy")

[node name="TestSound" type="AudioStreamPlayer" parent="UI/SettingsMenu/Volume"]
stream = ExtResource("7_kryq8")

[node name="VolLabel" type="Label" parent="UI/SettingsMenu"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 48.0
offset_bottom = 63.0
theme_override_font_sizes/font_size = 12
text = "Volume:"

[connection signal="landing_fail" from="Ship" to="UI" method="_on_ship_landing_fail"]
[connection signal="landing_success" from="Ship" to="UI" method="_on_ship_landing_success"]
[connection signal="button_up" from="UI/PauseMenu/Resume" to="UI" method="_on_resume_button_up"]
[connection signal="button_up" from="UI/PauseMenu/Quit" to="UI" method="_on_quit_button_up"]
[connection signal="button_up" from="UI/PauseMenu/Restart" to="UI" method="_on_restart_button_up"]
[connection signal="button_up" from="UI/PauseMenu/Settings" to="UI" method="_on_settings_button_up"]
[connection signal="button_up" from="UI/SettingsMenu/Back" to="UI" method="_on_back_button_up"]
[connection signal="drag_ended" from="UI/SettingsMenu/Volume" to="UI/SettingsMenu/Volume" method="_on_drag_ended"]
[connection signal="drag_started" from="UI/SettingsMenu/Volume" to="UI/SettingsMenu/Volume" method="_on_drag_started"]
[connection signal="value_changed" from="UI/SettingsMenu/Volume" to="UI/SettingsMenu/Volume" method="_on_value_changed"]
